# roaler

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.ghcr.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  docker-publish.yml
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/api/: client.ts  hooks.ts  types.ts
apps/web/src/components/shell/: app-shell.tsx  section-header.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  field.tsx  icon-button.tsx  icons.tsx  input.tsx  segmented-control.tsx  select.tsx
apps/web/src/features/auth/: auth-shell.test.tsx  auth-shell.tsx  login-form.tsx  setup-form.tsx
apps/web/src/features/collections/: collection-grid.tsx
apps/web/src/features/entries/: entry-detail-panel.test.tsx  entry-detail-panel.tsx  entry-list.tsx  reader-workspace.tsx  timeline-pane.tsx
apps/web/src/features/layout/: mobile-nav.tsx  nav-items.ts  sidebar.tsx  subview-shell.test.tsx  subview-shell.tsx
apps/web/src/features/search/: search-panel.tsx
apps/web/src/features/settings/: settings-form.tsx
apps/web/src/features/sources/: source-list.tsx
apps/web/src/routes/: router.tsx
apps/web/src/routes/pages/: collections-page.tsx  entry-page.tsx  inbox-page.tsx  login-page.tsx  search-page.tsx  settings-page.tsx  setup-page.tsx  sources-page.tsx
apps/web/src/styles/: index.css
apps/web/src/utils/: cn.test.ts
apps/web/tests/e2e/: app.spec.ts  start-e2e-stack.sh
apps/web/tests/fixtures/: feed.xml
crates/roaler-api/: Cargo.toml
crates/roaler-api/src/: authn.rs  lib.rs  main.rs  openapi.rs  session.rs
crates/roaler-api/src/routes/: ai.rs  auth.rs  collections.rs  entries.rs  mod.rs  opml.rs  search.rs  sources.rs  system.rs  webhooks.rs
crates/roaler-domain/: Cargo.toml
crates/roaler-domain/migrations/: 0001_init.sql  0002_align_runtime_schema.sql  0003_align_feed_runtime_schema.sql
crates/roaler-domain/src/: error.rs  lib.rs
crates/roaler-domain/src/ai/: mod.rs  prompts.rs  service.rs
crates/roaler-domain/src/auth/: mod.rs
crates/roaler-domain/src/collections/: mod.rs
crates/roaler-domain/src/config/: mod.rs
crates/roaler-domain/src/content/: mod.rs
crates/roaler-domain/src/db/: context.rs  mod.rs
crates/roaler-domain/src/entries/: mod.rs  mutate.rs  query.rs
crates/roaler-domain/src/feeds/: json_feed.rs  mod.rs  parser.rs  rsshub.rs  service.rs  sync.rs  websub.rs
crates/roaler-domain/src/models/: ai.rs  auth.rs  collection.rs  entry.rs  mod.rs  search.rs  source.rs  system.rs
crates/roaler-domain/src/opml/: mod.rs
crates/roaler-domain/src/queue/: mod.rs
crates/roaler-domain/src/search/: mod.rs
crates/roaler-domain/src/settings/: mod.rs
crates/roaler-worker/: Cargo.toml
crates/roaler-worker/src/: lib.rs  main.rs
crates/roaler-worker/src/jobs/: mod.rs
deployment/: Caddyfile  Dockerfile.api  Dockerfile.web  Dockerfile.worker
scripts/: backup.sh  restore.sh  smoke.sh
