[workspace]
members = [
  "crates/roaler-domain",
  "crates/roaler-api",
  "crates/roaler-worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0"
version = "0.1.0"
authors = ["Roaler Contributors"]

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
feed-rs = "2.3.1"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
opml = "1.1.6"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "gzip"] }
roxmltree = "0.21.1"
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = { version = "2.5.7", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
